<resources>
    <string name="app_name">Travel Journal</string>
    <string name="action_settings">Settings</string>
    <string name="scrapbook_heading">Create a scrapbook</string>
    <string name="scrapbook_subtitle">Pick your favorite photos, apply a themed template, and export everything as a shareable PDF.</string>
    <string name="scrapbook_pick_photos">Select photos</string>
    <string name="scrapbook_template_label">Templates</string>
    <string name="scrapbook_preview_label">Preview</string>
    <string name="scrapbook_empty_state">Start by selecting a few photos from your gallery.</string>
    <string name="scrapbook_export_pdf">Export PDF</string>
    <string name="scrapbook_photo_content_description">Selected scrapbook photo</string>
    <string name="scrapbook_template_floral">Floral</string>
    <string name="scrapbook_template_music">Music</string>
    <string name="scrapbook_template_tech">Tech</string>
    <string name="scrapbook_template_travel">Travel</string>
    <string name="scrapbook_export_success">Scrapbook saved to %1$s</string>
    <string name="scrapbook_export_error">Could not export scrapbook. Please try again.</string>
    <string name="scrapbook_no_photos">Add at least one photo to create your scrapbook.</string>
    <string name="scrapbook_share_pdf">Share scrapbook PDF</string>
    <string name="scrapbook_share_error">No compatible app found to share the PDF.</string>
    <string name="scrapbook_max_selection">Only the first %1$d photos were added.</string>
    <string name="home_title">Home</string>
    <string name="home_welcome_title">Welcome</string>
    <string name="home_welcome_subtitle">Create beautiful memories with photos, scrapbooks, and movies</string>
    <string name="home_scrapbook_card_title">Scrapbook</string>
    <string name="home_scrapbook_card_description">Create beautiful scrapbooks from your photos</string>
    <string name="home_movies_card_title">Movies</string>
    <string name="home_movies_card_description">Explore and manage your favorite movies</string>
    <string name="movies_heading">Create a Movie</string>
    <string name="movies_placeholder">Movies feature coming soon</string>
    <string name="movies_subtitle">Select photos and music to create your movie</string>
    <string name="movies_pick_photos">Select photos</string>
    <string name="movies_photos_label">Photos</string>
    <string name="movies_empty_state">Start by selecting photos from your gallery.</string>
    <string name="movies_music_label">Music</string>
    <string name="movies_add_custom_music">Add custom MP4 music</string>
    <string name="movies_create_movie">Create Movie</string>
    <string name="movies_export_movie">Export Movie</string>
    <string name="movies_no_photos">Add at least one photo to create your movie.</string>
    <string name="movies_no_music">Please select a music clip or add custom music.</string>
    <string name="movies_export_success">Movie saved to %1$s</string>
    <string name="movies_export_error">Could not create movie. Please try again.</string>
    <string name="movies_share_movie">Share movie</string>
    <string name="movies_share_error">No compatible app found to share the movie.</string>
    <string name="movies_custom_music_selected">Custom music selected</string>
    <string name="movies_preview_label">Preview</string>
    <string name="movies_preview_ready">Movie preview is ready!</string>
    <string name="movies_no_preview">No preview available. Please create a movie first.</string>
    <string name="movies_play">Play</string>
    <string name="movies_pause">Pause</string>
    <string name="music_clip_upbeat">Upbeat</string>
    <string name="music_clip_upbeat_description">Upbeat music</string>
    <string name="music_clip_romantic">Romantic</string>
    <string name="music_clip_romantic_description">Romantic music</string>
    <string name="music_clip_beats">Beats</string>
    <string name="music_clip_beats_description">Beats music</string>
    <string name="music_clip_mellow">Mellow</string>
    <string name="music_clip_mellow_description">Mellow music</string>
    <string name="music_clip_playful">Playful</string>
    <string name="music_clip_playful_description">Playful music</string>
    <string name="device_photos_heading">Your photos</string>
    <string name="device_photos_empty">We could not find any recent photos. Grant access or take a new picture to see it here.</string>
    <string name="device_photos_permission_denied">Photo access is disabled. Allow photo permissions in Settings to view your gallery here.</string>
    <string name="device_photo_content_description">Device photo thumbnail</string>
    <string name="photo_detail_title">Photo details</string>
    <string name="photo_detail_metadata_heading">Photo metadata</string>
    <string name="photo_detail_caption_label">Caption</string>
    <string name="photo_detail_summary_label">Summary</string>
    <string name="photo_detail_caption_hint">Waiting for caption</string>
    <string name="photo_detail_summary_hint">Waiting for summary</string>
    <string name="photo_detail_caption_action">Send caption to API</string>
    <string name="photo_detail_summary_action">Send summary to API</string>
    <string name="photo_detail_caption_placeholder_action">Caption will be sent to your API later.</string>
    <string name="photo_detail_summary_placeholder_action">Summary will be sent to your API later.</string>
    <string name="photo_detail_load_error">Unable to open this photo.</string>
    <string name="photo_detail_metadata_filename">File name: %1$s</string>
    <string name="photo_detail_metadata_size">Size: %1$s</string>
    <string name="photo_detail_metadata_dimensions">Dimensions: %1$s</string>
    <string name="photo_detail_metadata_mime">Type: %1$s</string>
    <string name="photo_detail_metadata_date">Captured: %1$s</string>
    <string name="common_unknown">Unknown</string>
    <string name="places_and_routes">Places &amp; Routes</string>
    <string name="textPlacesDescription">Put your photos on the map</string>
</resources>